--- a/scss/components/body/_body.scss
+++ b/scss/components/body/_body.scss
@@ -5,5 +5,8 @@
 }
 
 body {
-    background-color: antiquewhite;
+    width: 1200px;
+    margin: 0 auto;
+    padding-top: 100px;
+    background-color: aliceblue;
 }
