--- a/scss/main.css
+++ b/scss/main.css
@@ -5,5 +5,16 @@
 }
 
 body {
-  background-color: antiquewhite;
+  width: 1200px;
+  margin: 0 auto;
+  padding-top: 100px;
+  background-color: aliceblue;
+}
+
+.main-box {
+  width: 900px;
+  height: 600px;
+  margin: 0 auto;
+  border: 0.5px solid black;
+  border-radius: 10px;
 }/*# sourceMappingURL=main.css.map */
