--- a/scss/main.css
+++ b/scss/main.css
@@ -15,6 +15,16 @@ body {
   width: 900px;
   height: 600px;
   margin: 0 auto;
+  padding: 50px;
   border: 0.5px solid black;
   border-radius: 10px;
+  box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.1);
+}
+.main-box__inner {
+  display: flex;
+  justify-content: space-evenly;
+}
+.main-box__dropdown {
+  width: 200px;
+  border: 1px solid skyblue;
 }/*# sourceMappingURL=main.css.map */
