--- a/scss/components/main-box/_main-box.scss
+++ b/scss/components/main-box/_main-box.scss
@@ -1,13 +1,15 @@
 
 .main-box { 
-    width: 900px;
-    height: 600px;
+    width: 600px;
+    height: 400px;
     margin: 0 auto;
     padding: 50px;
 
     border: 0.5px solid black;
     border-radius: 10px;
     box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.1);
+
+    background-color: aliceblue;
 
     &__inner {
         display: flex;
