--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import './components/body/body';
 @import './components/main-box/main-box';
 @import './components/weather-card/weather-card';
-
+@import './components/button-reset/buttor-reset';
+@import './components/warning/warning';
 
