--- a/scss/components/main-box/_main-box.scss
+++ b/scss/components/main-box/_main-box.scss
@@ -1,5 +1,6 @@
 
 .main-box { 
+
     width: 700px;
     height: 450px;
     margin: 0 auto;
@@ -9,7 +10,7 @@
     border-radius: 10px;
     box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.1);
 
-    background-color: aliceblue;
+    background-color: rgb(250, 250, 251);
 
     &__inner {
         display: flex;
