--- a/scss/components/weather-card/_weather-card.scss
+++ b/scss/components/weather-card/_weather-card.scss
@@ -1,1 +1,40 @@
 
+.weather {
+    padding: 10px;
+    margin-top: 30px;
+    min-height: 270px;
+   
+    &__title {
+        display: block;
+        text-align: center;
+        font-size: 36px;
+    }
+
+    &__container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 10px;
+        &__inner {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+        &__icon {
+            margin-left: 50px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+    
+    &__temp {
+        font-size: 50px;
+        font-weight: 600;
+        color: rgb(209, 42, 42);
+    }
+    &__icon {
+        width: 125px; 
+    }
+    
+}
