--- a/scss/main.css
+++ b/scss/main.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  margin-top: 0;
+  margin: 0;
   padding: 0;
 }
 
@@ -18,7 +18,7 @@ body {
   border: 0.5px solid black;
   border-radius: 10px;
   box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.1);
-  background-color: aliceblue;
+  background-color: rgb(250, 250, 251);
 }
 .main-box__inner {
   display: flex;
@@ -27,4 +27,70 @@ body {
 .main-box__dropdown {
   width: 150px;
   border: 1px solid skyblue;
+}
+
+.weather {
+  padding: 10px;
+  margin-top: 30px;
+  min-height: 270px;
+}
+.weather__title {
+  display: block;
+  text-align: center;
+  font-size: 36px;
+}
+.weather__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+.weather__container__inner {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.weather__container__icon {
+  margin-left: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.weather__temp {
+  font-size: 50px;
+  font-weight: 600;
+  color: rgb(209, 42, 42);
+}
+.weather__icon {
+  width: 125px;
+}
+
+.reset {
+  display: flex;
+  justify-content: center;
+}
+.reset__button {
+  width: 100px;
+  height: 30px;
+  border: 0.5px solid rgb(79, 137, 179);
+  border-radius: 5px;
+}
+.reset__button:hover {
+  background-color: rgb(219, 159, 159);
+  color: white;
+}
+
+.warning {
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  margin-top: 50px;
+  border-radius: 15px;
+  background-color: rgb(239, 182, 182);
+}
+.warning__logo {
+  width: 70px;
+}
+.warning__inner {
+  margin-left: 30px;
 }/*# sourceMappingURL=main.css.map */
