--- a/scss/components/weather-card/_weather-card.scss
+++ b/scss/components/weather-card/_weather-card.scss
@@ -34,7 +34,10 @@
         color: rgb(209, 42, 42);
     }
     &__icon {
-        width: 125px; 
+        
+        width: 150px;
+        border: 1px solid rgb(0, 0, 0, 0.1); 
+        border-radius: 15px;
     }
     
 }
