--- a/scss/main.css
+++ b/scss/main.css
@@ -62,7 +62,9 @@ body {
   color: rgb(209, 42, 42);
 }
 .weather__icon {
-  width: 125px;
+  width: 150px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
 }
 
 .reset {
